# ep3-tc

./: .gitignore  base.ml
NAME/: dune-project
NAME/_build/: log
NAME/test/: dune
s1tm/: dune  s1tm.ml
s1tm/_build/: .db  .digest-db  log
s1tm/_build/.sandbox/4cd3565f44d2e6dea6927cc08e09558d/default/: s1tm.ml
s1tm/_build/default/: s1tm.ml  s1tm.pp.ml
s1tm/_build/default/.merlin-conf/: exe-s1tm
s1tm/_build/default/.ppx/90bd913c16c43a762c255610518422a9/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
s1tm/_build/default/.ppx/bc8ddb59faeb4e39fc6ed7f7a64c6b6f/: dune__exe___ppx.cmo
s1tm/_build/default/.s1tm.eobjs/byte/: dune__exe__S1tm.cmti
s1tm/_build/default/.s1tm.eobjs/native/: dune__exe__S1tm.cmx
s1tm/_build/default/test/: inv1.in  inv2.in  inv3.in  inv4.in  new_inv_start.in  new_loop.in  new_valid_acc.in  test01.in  test03.in  test03.out  test04.in  test04.out  test05.in  test06.in  test07.in  test08.in  test09.exp  test09.in  test10.exp  test11.exp  test12.in  test17.in  test17.out  test20.in  test21.in  test24.out  test25.in  test25.out  test28.in  test29.in  test30.out  test32.out  test33.in  test34.exp  test35.in  test36.exp  test36.in  test38.in  test38.out  test39.exp  (+13 more)
s1tm/test/: custom_invalid.in  dune  dune.bak  dune.tmp  generate_tests.ml  new_inv_blank.in  new_inv_word.in  new_valid_rej.exp  new_valid_rej.in  test01.exp  test01.in  test02.exp  test02.in  test03.exp  test03.in  test04.in  test05.exp  test05.in  test06.in  test07.in  test08.in  test09.exp  test09.in  test10.exp  test10.in  test11.in  test13.in  test14.in  test15.in  test16.exp  test16.in  test18.in  test19.exp  test19.in  test21.exp  test22.in  test23.exp  test23.in  test24.in  test26.in  (+20 more)
